# idempotency-kit

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  architecture.md  index.md  quickstart.md  testing_conventions.md  user_guide.md
idempotency_kit/: __init__.py  settings.py
idempotency_kit/core/: __init__.py  constants.py  exceptions.py
idempotency_kit/core/adapters/: __init__.py  basic.py
idempotency_kit/core/decorators/aio/: idempotent.py
idempotency_kit/core/models/: __init__.py  entities.py
idempotency_kit/core/protocols/: adapter.py  metrics.py
idempotency_kit/core/protocols/aio/: __init__.py  repository.py
idempotency_kit/core/services/: __init__.py  domain.py
idempotency_kit/core/services/aio/: coordinator.py
idempotency_kit/dishka/: __init__.py  common.py  protocols.py
idempotency_kit/dishka/aio/: __init__.py  coordinator.py  redis.py
idempotency_kit/infra/: __init__.py
idempotency_kit/infra/metrics/: prometheus.py
idempotency_kit/infra/storage/: __init__.py
idempotency_kit/infra/storage/redis/: __init__.py
idempotency_kit/infra/storage/redis/aio/: __init__.py  repository.py
tests/: conftest.py
tests/integration/: conftest.py  test_redis_integration.py
tests/unit/core/: conftest.py  test_coordinator.py  test_entities.py  test_idempotent.py  test_services.py
tests/unit/storage/redis/aio/: test_bulk.py  test_concurrency.py  test_repository.py
