[project]
name = "idempotency-kit"
dynamic = ["version"]
description = "Production-ready idempotency library for async Python applications"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@gmail.com" }]
keywords = ["idempotency", "async", "asyncio", "redis", "deduplication", "distributed-systems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0,<3.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/idempotency-kit"
Documentation = "https://bedrock-python.github.io/idempotency-kit/"
Changelog = "https://github.com/bedrock-python/idempotency-kit/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/idempotency-kit/issues"

[project.optional-dependencies]
prometheus = [
    "prometheus-client>=0.15.0",
]
redis = [
    "redis>=4.5.0",
    "orjson>=3.8.0,<4.0.0",
]
dishka = [
    "dishka>=1.0.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "testcontainers>=4.14.1",
    "fakeredis>=2.28.2",
    "redis>=5.0.0",
    "orjson>=3.11.7,<4.0.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    { include-group = "test" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "idempotency_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["idempotency_kit"]

[tool.hatch.build.targets.sdist]
include = ["/idempotency_kit", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.11"
files = ["idempotency_kit"]
mypy_path = ["."]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "DTZ", "ANN", "N802", "PERF401", "SIM105", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["idempotency_kit"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__version__.py",
    "*/dishka/*",
    "*/settings.py",
    "*/infra/metrics/*",
]

[tool.coverage.report]
fail_under = 85
